+Add option for enable/disable regex search in quick find bar
+Automatically expire status bar info messages after 10 seconds
+Persist 5 most recent search locations between sessions
+Add option to auto-trim trailing whitespace when saving file
+Add Valencian translation
+New version of Launch (add support for D)
+Improved OSX cursor movement keybinding compliance (patch from Joe Strout)

BUG FIXES:
+Fix case where encoding can be None in when initializing the preference dialog
+Fix some issues with switching search direction
+F3 causing search to skip every other match when search bar has focus
+Fix bug in updating status after a conrol object was already deleted
+Fix bug related to ? being in keyword helper lists for some languages
+Handle invalid regular expressions in find dialog
+Fix a number of bugs in the new Find All search features
+Fix not being able to open files mounted to /Volumes on osx
+Fix issue of window scrolling horizontally when restoring cursor position

#-----------------------------------------------------------------------------#

VERSION 0.3.80
DATE 10/02/2008
15th Alpha Release

NEWS:
This release includes a number of major feature enhancements and bug fixes.
Most notably is the all new text searching and replacing feature. The entire
search backend was rewritten from scratch to to make a number of new searching,
replaceing, and file grepping features availble. Whole directories of files
can be grepped for matches, new convinient key shortcuts, and an improved ui
with a number of new configuration options are just the begining.

A large number of supported languages also now have improved auto-indent
support. Added support for some new programming languages, and much much, more.
See the below changelog for more details.

NEW: [features/improvements]
+New find/replace dialog
+Add Find All feature (Current Document, All open documents, in files)
+Add Replace All (Current Document, All open documents)